Fix test lib dependency.